--- a/styles/global.scss
+++ b/styles/global.scss
@@ -3,7 +3,7 @@ body {
   padding: 0;
   margin: 0;
   box-sizing: border-box;
-  font-family: sans-serif;
+  font-family: 'Krona One', sans-serif;
 }
 
 *,
