--- a/styles/global.scss
+++ b/styles/global.scss
@@ -11,3 +11,12 @@ body {
 *:after {
   box-sizing: inherit;
 }
+
+.center {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+  width: 100vw;
+}
