--- a/styles/components/Header.module.scss
+++ b/styles/components/Header.module.scss
@@ -4,8 +4,9 @@
 
 .nav {
   display: flex;
+  justify-content: space-between;
   border-bottom: 1px #ccc solid;
-  padding: .5rem 0;
+  padding: .5rem 0 .5rem .5rem;
 }
 
 .links {
