--- a/styles/components/Header.module.scss
+++ b/styles/components/Header.module.scss
@@ -6,7 +6,7 @@
   display: flex;
   justify-content: space-between;
   border-bottom: 1px #ccc solid;
-  padding: .5rem 0 .5rem .5rem;
+  padding: .5rem;
 }
 
 .links {
