--- a/styles/components/Header.module.scss
+++ b/styles/components/Header.module.scss
@@ -7,12 +7,13 @@
   justify-content: space-between;
   border-bottom: 1px #ccc solid;
   padding: .5rem;
+  
+  a {
+    text-decoration: none;
+    margin-bottom: 0;
+  }
 }
 
 .links {
   display: flex;
-  
-  a {
-    text-decoration: none;
-  }
 }
