--- a/styles/components/Header.module.scss
+++ b/styles/components/Header.module.scss
@@ -1,5 +1,6 @@
 .title {
   font-size: 1.25rem;
+  color: black;
 }
 
 .nav {
@@ -16,4 +17,8 @@
 
 .links {
   display: flex;
+  
+  a {
+    color: black;
+  }
 }
