--- a/styles/global.scss
+++ b/styles/global.scss
@@ -29,3 +29,13 @@ main {
 section {
   padding: 1rem;
 }
+
+h1,
+h2 {
+  text-transform: uppercase;
+}
+
+p {
+  font-size: 1.5rem;
+  font-family: 'Open Sans', sans-serif;
+}
