--- a/styles/components/Link.module.scss
+++ b/styles/components/Link.module.scss
@@ -1,8 +1,9 @@
 .link {
   padding: .5rem;
   text-decoration: none;
-  margin-bottom: 2px black solid;
+  border-bottom: 2px black solid;
   font-size: 1.5rem;
   padding-bottom: 2px;
   text-transform: uppercase;
+  color: black;
 }
