--- a/styles/components/Link.module.scss
+++ b/styles/components/Link.module.scss
@@ -1,9 +1,8 @@
 .link {
-  padding: .5rem;
+  padding: .5rem 0 2px 0;
   text-decoration: none;
   border-bottom: 2px black solid;
   font-size: 1.25rem;
-  padding-bottom: 2px;
   text-transform: uppercase;
   color: black;
 }
