--- a/styles/global.scss
+++ b/styles/global.scss
@@ -61,13 +61,15 @@ form {
 }
 
 label {
-  font-size: 1.25;
+  font-size: 1.25rem;
+  font-weight: 500;
   font-family: 'Open Sans', sans-serif;
-  margin-bottom: 1.5rem;
+  margin-bottom: .5rem;
 }
 
 input,
 textarea,
 select {
   width: 100%;
+  margin-bottom: 1rem;
 }
