--- a/styles/global.scss
+++ b/styles/global.scss
@@ -62,7 +62,7 @@ form {
 
 label {
   font-size: 1.25rem;
-  font-weight: 500;
+  font-weight: 600;
   font-family: 'Open Sans', sans-serif;
   margin-bottom: .5rem;
 }
@@ -70,7 +70,9 @@ label {
 input,
 textarea,
 select {
+  font-family: 'Open Sans', sans-serif;
   width: 100%;
   margin-bottom: 1rem;
   font-size: 1rem;
+  border: 2px black solid:
 }
