--- a/styles/global.scss
+++ b/styles/global.scss
@@ -87,6 +87,7 @@ select {
 .placeholder {
   background-color: #ccc;
   border-radius: .6rem;
-  height: 100px;
+  height: 200px;
   width: 100%;
+  grid-column-gap: 1rem;
 }
