--- a/styles/components/Footer.module.scss
+++ b/styles/components/Footer.module.scss
@@ -5,8 +5,16 @@
 }
 
 .links {
+  display: flex;
+  flex-direction: column;
+
   a {
     text-decoration: none;
     font-size: 1.25rem;
+    margin-bottom: 1rem;
+    
+    &:last-child {
+      margin-bottom: 0;
+    }
   }
 }
