--- a/styles/components/Footer.module.scss
+++ b/styles/components/Footer.module.scss
@@ -12,6 +12,7 @@
     text-decoration: none;
     font-size: 1.25rem;
     margin-bottom: 1rem;
+    color: white;
     
     &:last-child {
       margin-bottom: 0;
