--- a/styles/pages/gallery-item.module.scss
+++ b/styles/pages/gallery-item.module.scss
@@ -5,3 +5,10 @@
 .name {
   margin-bottom: 1rem;
 }
+
+.placeholder {
+  background-color: #ccc;
+  border-radius: .6rem;
+  height: 300px;
+  width: 100%;
+}
