--- a/styles/components/Footer.module.scss
+++ b/styles/components/Footer.module.scss
@@ -16,8 +16,8 @@
     text-decoration: none;
     font-size: 1.25rem;
     margin-bottom: 1rem;
-    padding-bottom: 2px;
-    border-bottom: 2px white solid;
+    // padding-bottom: 2px;
+    // border-bottom: 2px white solid;
     color: white;
     
     &:last-child {
