--- a/styles/global.scss
+++ b/styles/global.scss
@@ -82,7 +82,7 @@ select {
 .grid {
   display: grid;
   grid-template-columns: 1fr 1fr;
-  grid-column-gap: 1rem;
+  grid-gap: 1rem;
 }
 
 .placeholder {
