--- a/styles/components/Footer.module.scss
+++ b/styles/components/Footer.module.scss
@@ -2,6 +2,11 @@
   padding: 3rem 1rem;
   background-color: #666;
   color: white;
+  
+  a {
+    color: white;
+    text-decoration: none;
+  }
 }
 
 .title {
