--- a/styles/global.scss
+++ b/styles/global.scss
@@ -86,6 +86,14 @@ select {
   grid-gap: 1rem;
 }
 
+.home-grid {
+  margin-bottom: 1rem;
+}
+
+.home-link {
+  color: black;
+}
+
 .placeholder {
   background-color: #ccc;
   border-radius: .6rem;
