--- a/styles/components/Footer.module.scss
+++ b/styles/components/Footer.module.scss
@@ -2,6 +2,8 @@
   padding: 3rem 1rem;
   background-color: #666;
   color: white;
+  background-image: url('/footer-bg.png'):
+  background-size: cover;
   
   a {
     color: white;
