--- a/styles/components/Footer.module.scss
+++ b/styles/components/Footer.module.scss
@@ -2,7 +2,7 @@
   padding: 3rem 1rem;
   background-color: #666;
   color: white;
-  background-image: url('/footer-bg.png'):
+  background-image: url('/footer-bg.png');
   background-size: cover;
   
   a {
