--- a/styles/components/Footer.module.scss
+++ b/styles/components/Footer.module.scss
@@ -1,6 +1,6 @@
 .footer {
   padding: 3rem 1rem;
-  background-color: #666;
+  background-color: transparent;
   color: white;
   background-image: url('/footer-bg.png');
   background-size: cover;
