--- a/styles/components/Header.module.scss
+++ b/styles/components/Header.module.scss
@@ -22,3 +22,13 @@
     color: black;
   }
 }
+
+.mobileMenu {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  background-color: black;
+  color: white;
+}
