--- a/styles/components/Header.module.scss
+++ b/styles/components/Header.module.scss
@@ -24,16 +24,15 @@
 }
 
 .mobileLinks {
+  flex: 1;
   display: flex;
   flex-direction: column;
-  margin-bottom: 3rem;
+  text-align: center;
 
   a {
     text-decoration: none;
-    font-size: 1.25rem;
-    margin-bottom: 1rem;
-    // padding-bottom: 2px;
-    // border-bottom: 2px white solid;
+    font-size: 1.5rem;
+    margin-bottom: 1.5rem;
     color: white;
     
     &:last-child {
@@ -50,4 +49,8 @@
   height: 100vh;
   background-color: black;
   color: white;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  text-align: center;
 }
