--- a/styles/components/Header.module.scss
+++ b/styles/components/Header.module.scss
@@ -23,6 +23,11 @@
   }
 }
 
+.mobileIcon {
+  padding: 1rem;
+  text-align: right;
+}
+
 .mobileLinks {
   flex: 1;
   display: flex;
@@ -52,5 +57,4 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  text-align: center;
 }
