--- a/styles/components/Header.module.scss
+++ b/styles/components/Header.module.scss
@@ -56,5 +56,5 @@
   color: white;
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
+  justify-content: flex-start;
 }
