--- a/styles/components/Header.module.scss
+++ b/styles/components/Header.module.scss
@@ -29,10 +29,10 @@
 }
 
 .mobileLinks {
-  flex: 1;
   display: flex;
   flex-direction: column;
   text-align: center;
+  margin-bottom: 2rem;
 
   a {
     text-decoration: none;
