--- a/styles/components/Header.module.scss
+++ b/styles/components/Header.module.scss
@@ -46,6 +46,12 @@
   }
 }
 
+.contact {
+  color: white;
+  text-align: center;
+  font-size: 1.35rem;
+}
+
 .mobileMenu {
   position: fixed;
   top: 0;
