--- a/styles/components/Header.module.scss
+++ b/styles/components/Header.module.scss
@@ -11,6 +11,7 @@
 
 .nav {
   display: flex;
+  align-items: center;
   justify-content: space-between;
   border-bottom: 1px #ccc solid;
   padding: .5rem;
@@ -22,6 +23,7 @@
   
   &.light {
     position: fixed;
+    width: 100%;
   }
 }
 
