--- a/styles/pages/index.module.scss
+++ b/styles/pages/index.module.scss
@@ -8,6 +8,9 @@
 }
 
 .notice {
-  padding: 3rem 0;
-  background-color: #cdcdcd;
+  padding: 4rem 0;
+  background-color: #eee;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
