--- a/styles/pages/index.module.scss
+++ b/styles/pages/index.module.scss
@@ -7,6 +7,7 @@
 }
 
 .text {
+    max-width: 100%;
 
     p,
     li {
@@ -14,6 +15,10 @@
         line-height: 1.25;
         margin-bottom: 1rem;
         font-family: 'Krona One', sans-serif;
+
+        @media screen and (max-width: 800px) {
+            font-size: 1.5rem;
+        }
     }
 }
 
